--- a/appointment.html
+++ b/appointment.html
@@ -52,7 +52,7 @@
         <ul id="appointmentList"></ul>
     </main>
     <footer>
-        <p>© 2024 Beauty Parlour</p>
+        <p>© Pratiksha Beauty Parlour</p>
     </footer>
     <script>
         document.getElementById('appointment-form').addEventListener('submit', function(event) {
