--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <p>Address: 123 Beauty St, Glamour City</p>
     </main>
     <footer>
-        <p>© 2024 Beauty Parlour</p>
+        <p>© Pratiksha Beauty Parlour</p>
     </footer>
 </body>
 </html>
