--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
         </ul>
     </main>
     <footer>
-        <p>© 2024 Beauty Parlour</p>
+        <p>© Pratiksha Beauty Parlour</p>
     </footer>
 </body>
 </html>
