--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
     </header>
     <main>
         <h2>Get in Touch</h2>
-        <p>Email: info@beautyparlour.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Beauty St, Glamour City</p>
+        <p>Email: pratikshabeautyzone@gmail.com</p>
+        <p>Phone: 8830973740</p>
+        <p>Address: Nashik</p>
     </main>
     <footer>
         <p>© Pratiksha Beauty Parlour</p>
